# MiniGame

./: .gitignore  Build_Debug.bat  Build_MinSizeRel.bat  Build_RelWithDebInfo.bat  Build_Release.bat  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  LICENSE.txt  Package_Debug.bat  Package_MinSizeRel.bat  Package_RelWithDebInfo.bat  Package_Release.bat  README.md  Setup.bat
CoinDash3D/: CMakeLists.txt
CoinDash3D/Inc/: Application.h  Background.h  Button.h  Camera.h  Character.h  Coin.h  CoinSpawner.h  Floor.h  Light.h  MiniMap.h  Panel.h  PlayScene.h  StartScene.h  StatusViewer.h  Wall.h
CoinDash3D/Resource/Button/: Quit.json
CoinDash3D/Resource/Model/: Floor.glb
CoinDash3D/Src/: Application.cpp  Background.cpp  Button.cpp  Camera.cpp  Character.cpp  Coin.cpp  CoinSpawner.cpp  Floor.cpp  Light.cpp  Main.cpp  MiniMap.cpp  Panel.cpp  PlayScene.cpp  StartScene.cpp  StatusViewer.cpp  Wall.cpp
Engine/Module/: CMakeLists.txt  README.md
Engine/Module/AnimationModule/: CMakeLists.txt  README.md
Engine/Module/AudioModule/: CMakeLists.txt  README.md
Engine/Module/CrashModule/: CMakeLists.txt  README.md
Engine/Module/FileModule/: CMakeLists.txt  README.md
Engine/Module/GameModule/: CMakeLists.txt  README.md
Engine/Module/MathModule/: CMakeLists.txt  README.md
Engine/Module/PlatformModule/: CMakeLists.txt  README.md
Engine/Module/RenderModule/: CMakeLists.txt  README.md
GameMaker/: .gitignore  CMakeLists.txt  README.md
GameMaker/Core/Inc/: Assertion.h  AudioManager.h  Camera2D.h  Camera3D.h  Collision2D.h  CrashUtils.h  EntityManager.h  FileUtils.h  FreeEulerCamera3D.h  GameEngine.h  GameInput.h  GameMath.h  GameTimer.h  IEntity.h  IManager.h  IMesh.h  IResource.h  ITexture.h  IndexBuffer.h  InputManager.h  Macro.h  RenderManager.h  Renderer.h  Renderer2D.h  Renderer3D.h  ResourceManager.h  Shader.h  SkinnedMesh.h  Sound.h  StaticMesh.h  StringUtils.h  TTFont.h  Texture2D.h  Transform.h  UniformBuffer.h  VertexBuffer.h
GameMaker/Core/Src/: AudioManager.cpp  Collision2D.cpp  Config.h.in  CrashUtils.cpp  EntityManager.cpp  FileUtils.cpp  GameEngine.cpp  GameInput.cpp  GameTimer.cpp  InputManager.cpp  RenderManager.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  ResourceManager.cpp  Shader.cpp  SkinnedMesh.cpp  Sound.cpp  StaticMesh.cpp  StringUtils.cpp  TTFont.cpp  Texture2D.cpp
GameMaker/Sample/: CMakeLists.txt
GameMaker/Sample/02.Triangle/: CMakeLists.txt
GameMaker/Sample/05.Grid2D/: CMakeLists.txt
GameMaker/Sample/05.KTX/: CMakeLists.txt
GameMaker/Sample/06.Grid2D/: CMakeLists.txt
GameMaker/Sample/07.Cube/: CMakeLists.txt
GameMaker/Sample/07.Rendering2D/: CMakeLists.txt
GameMaker/Sample/08.Cube/: CMakeLists.txt
GameMaker/Sample/08.Grid3D/: CMakeLists.txt
GameMaker/Sample/08.Rendering3D/: CMakeLists.txt
GameMaker/Sample/08.Sprite2D/: CMakeLists.txt
GameMaker/Sample/09.Cube/: CMakeLists.txt
GameMaker/Sample/10.Sprite2D/: CMakeLists.txt
GameMaker/Script/: Config.cmake  GenerateProjectFiles.bat  Package.bat  Setup.bat  Setup.py
GameMaker/Shader/: Geometry2D.frag  Geometry2D.vert  Renderer2D.frag  Renderer2D.vert  Renderer3D.frag  Renderer3D.vert  Sprite2D.frag  Sprite2D.vert  String2D.frag  String2D.vert
Impl/: CMakeLists.txt
Impl/Inc/: Camera.h
Impl/Src/: Camera.cpp  Main.cpp
Sample/: CMakeLists.txt
Sample/00.Empty/: CMakeLists.txt
Sample/00.Empty/Src/: Main.cpp
Sample/01.Initialize/: CMakeLists.txt
Sample/01.Initialize/Src/: Main.cpp
Sample/02.Crash/: CMakeLists.txt
Sample/02.Crash/Src/: Main.cpp
Sample/02.Triangle/: CMakeLists.txt
Sample/02.Triangle/Res/: Shader.vert
Sample/02.Triangle/Src/: Main.cpp
Sample/03.Texture/: CMakeLists.txt
Sample/03.Texture/Src/: Main.cpp
Sample/03.Triangle/: CMakeLists.txt
Sample/03.Triangle/Res/: Shader.frag
Sample/03.Triangle/Src/: Main.cpp
Sample/04.MultiTexture/: CMakeLists.txt
Sample/04.MultiTexture/Res/: Shader.vert
Sample/04.MultiTexture/Src/: Main.cpp
Sample/04.Texture/: CMakeLists.txt
Sample/04.Texture/Src/: Main.cpp
Sample/05.DDS/: CMakeLists.txt  README.md
Sample/05.DDS/Res/: Shader.frag  Shader.vert  awesomeface_dxt1.dds
Sample/05.DDS/Src/: Main.cpp
Sample/06.Geometry2D/: CMakeLists.txt
Sample/06.Geometry2D/Src/: Main.cpp
Sample/06.Grid3D/: CMakeLists.txt
Sample/06.Grid3D/Src/: Main.cpp
Sample/07.Cube/Src/: Main.cpp
Sample/07.Sprite2D/: CMakeLists.txt
Sample/07.Sprite2D/Src/: Main.cpp
Sample/08.Sprite2D/Src/: Main.cpp
Sample/08.String2D/: CMakeLists.txt
Sample/08.String2D/Src/: Main.cpp
Sample/09.Atlas2D/: CMakeLists.txt
Sample/09.Atlas2D/Src/: Main.cpp
Sample/09.String2D/: CMakeLists.txt
Sample/09.String2D/Src/: Main.cpp
Sample/10.GLTF/: CMakeLists.txt
Sample/10.GLTF/Src/: Main.cpp
Sample/10.Sound/: CMakeLists.txt
Sample/10.Sound/Src/: Main.cpp
Sample/11.Collision2D/: CMakeLists.txt
Sample/11.Collision2D/Src/: Main.cpp
Sample/11.File/: CMakeLists.txt
Sample/11.File/Src/: Main.cpp
Sample/11.Input/: CMakeLists.txt
Sample/11.Input/Src/: Main.cpp
Sample/11.MemoryAllocation/: CMakeLists.txt
Sample/11.MemoryAllocation/Src/: Main.cpp
Sample/12.FreeEulerCamera3D/: CMakeLists.txt
Sample/12.FreeEulerCamera3D/Src/: Main.cpp
Sample/13.Cube/: CMakeLists.txt
Sample/13.Cube/Res/: Shader.vert
Sample/13.Cube/Src/: Main.cpp
Sample/14.GLTF/: CMakeLists.txt
Sample/14.GLTF/Src/: Main.cpp
Sample/14.StaticMesh/: CMakeLists.txt
Sample/14.StaticMesh/Res/: Shader.frag
Sample/14.StaticMesh/Src/: Main.cpp
Sample/15.GammaCorrection/: CMakeLists.txt
Sample/15.GammaCorrection/Res/: Shader.frag
Sample/15.GammaCorrection/Src/: Main.cpp
Sample/15.PostProcessing/: CMakeLists.txt
Sample/15.PostProcessing/Res/: Shader.vert
Sample/15.PostProcessing/Src/: Main.cpp
Sample/15.Skybox/: CMakeLists.txt
Sample/15.Skybox/Src/: Main.cpp
Sample/16.Light/: CMakeLists.txt
Sample/16.Light/Src/: Main.cpp
Sample/16.Skybox/: CMakeLists.txt
Sample/16.Skybox/Src/: Main.cpp
(+330 files in other folders)
