cmake_minimum_required(VERSION 3.27)

project(MiniGame)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_subdirectory(ThirdParty)

set(PROJECT_NAME "MiniGame")

include("${CMAKE_CURRENT_SOURCE_DIR}/CMake/Config.cmake")
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/Config.h.in" "${CMAKE_CURRENT_SOURCE_DIR}/Core/Src/Config.h")

set(GAME_MAKER_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(GAME_MAKER_CORE "${GAME_MAKER_PATH}/Core")
set(GAME_MAKER_INCLUDE "${GAME_MAKER_PATH}/Core/Inc")
set(GAME_MAKER_SOURCE "${GAME_MAKER_PATH}/Core/Src")
set(GAME_MAKER_SCRIPT "${GAME_MAKER_PATH}/Script")
set(GAME_MAKER_SHADER "${GAME_MAKER_PATH}/Shader")

file(GLOB_RECURSE GAME_MAKER_CORE_FILE "${GAME_MAKER_CORE}/**")
file(GLOB_RECURSE GAME_MAKER_SCRIPT_FILE "${GAME_MAKER_SCRIPT}/**")
file(GLOB_RECURSE GAME_MAKER_SHADER_FILE "${GAME_MAKER_SHADER}/**")

add_library(${PROJECT_NAME} STATIC ${GAME_MAKER_CORE_FILE} ${GAME_MAKER_SCRIPT_FILE} ${GAME_MAKER_SHADER_FILE})

target_include_directories(${PROJECT_NAME} PUBLIC ${GAME_MAKER_INCLUDE})
target_link_libraries(
    ${PROJECT_NAME} 
    Dbghelp.lib 
    Pathcch.lib 
    Shlwapi.lib 
    cgltf
    glad
    imgui
    jsoncpp
    miniaudio
    SDL2
    stb
    mimalloc-static
)

target_compile_definitions(
    ${PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:RELWITHDEBINFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZEREL_MODE>
)

set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

set(VALIDATOR_PATH "${GAME_MAKER_PATH}/Script/ShaderValidator.bat")
foreach (SHADER_SOURCE_FILE IN LISTS GAME_MAKER_SHADER_FILE)
    add_custom_command(
        TARGET ${PROJECT_NAME}
        POST_BUILD
        COMMAND ${VALIDATOR_PATH} ${SHADER_SOURCE_FILE}
    )
endforeach()

source_group(TREE "${GAME_MAKER_CORE}" PREFIX "${PROJECT_NAME}/Core" FILES ${GAME_MAKER_CORE_FILE})
source_group(TREE "${GAME_MAKER_SCRIPT}" PREFIX "${PROJECT_NAME}/Script" FILES ${GAME_MAKER_SCRIPT_FILE})
source_group(TREE "${GAME_MAKER_SHADER}" PREFIX "${PROJECT_NAME}/Shader" FILES ${GAME_MAKER_SHADER_FILE})